@@ -62,6 +62,16 @@
 				</TCEforms>
 			</showGOKID>
 
+			<omitXXX>
+				<TCEforms>
+					<label>LLL:EXT:nkwgok/pi1/locallang.xml:omitXXX</label>
+					<config>
+						<type>check</type>
+						<default>0</default>
+					</config>
+				</TCEforms>
+			</omitXXX>
+
 		</el>
 	</ROOT>
 </T3DataStructure>
