@@ -1,6 +1,7 @@
 2012-07-?? 2.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Change field names in Tev records according to the GND format
-	* Add ability to start the tree with more than one element
+	* Add ability to start the tree with more than one element at the root level
+	* Add option to omit subjects whose code ends with »XXX« (Flexform)
 
 2012-06-01 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Clean up class structure.
